[package]
name = "avirus"
version = "0.2.0"
authors = ["kentd"]

description = "A Rust library for manipulating AVI files for purposes such as glitch art."
repository = "https://github.com/chinatsu/avirus/"
readme = "README.md"
keywords = ["multimedia", "video"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
byteorder = "1.2.3"
