[package]
name = "avirus"
version = "0.2.4"
authors = ["kentd"]

description = "A Rust library for manipulating AVI files for purposes such as glitch art."
repository = "https://github.com/chinatsu/avirus/"
readme = "README.md"
keywords = ["multimedia", "video"]
license-file = "LICENSE"

[dependencies]
byteorder = "1"
